# store-wpay-payment-datahub

./: .gitignore  CODEOWNERS  LICENSE  README.md  cloudbuild.yaml  merge-req-cloudbuild.yaml  pdh_rd_data_navigator.alh_txn_listing.txt  pull-req-cloudbuild.yaml  pylintrc  pyproject.toml
.githooks/: pre-push
app/configs/prod/: airflow.cfg
app/dags/common/: airflow_monitoring.py  compliance_rules.py  load_into_bq_parquet.py  pdh_billing_engine_etl.py  pdh_de_rply_queries.py  pdh_edpay_file_etl.py  pdh_edpay_file_generation.py  pdh_external_rate_card_refresh.py  pdh_external_table_refresh.py  pdh_external_table_refresh_wkly.py  pdh_extractEmailAttachment_SapHybris.py  pdh_file_gen_bq_to_gcs.py  pdh_file_gen_etl.py  pdh_generic_file_gen_bq_to_gcs.py  pdh_generic_file_gen_etl.py  pdh_load_DN_extracts.py  pdh_load_wdp.py  pdh_looker_nrt_payout_queries.py  pdh_looker_queries.py  pdh_reconframework_report.py  pdh_reporting_queries_etl.py  pdh_sf_queries.py  pdh_stlm_file_gen_bq_to_gcs.py  pdh_stlm_file_gen_etl.py  pdh_validate_gsheet_store_data.py  pdh_validate_gsheet_store_date.py  pdh_wpay_card_identity_daily_before_business.py  pdh_wpay_card_identity_gen.py  pdh_wpay_card_identity_query.py
app/dags/dev/: export_airflow_variables.py
app/dags/preprod/: pdh_replicate_data_navigator_quickcilver_prod_to_uat.py  pdh_replicate_merfee_data_navigator_prod_to_uat.py  pdh_replicate_src_to_target.py  pdh_replicate_wdp_prod_to_uat.py
backoffice/: .gitignore
backoffice/react-ui/: hello.js
dags/common/: load_into_bq_parquet.py  pdh_billing_engine_etl.py  pdh_external_table_refresh.py  pdh_extractEmailAttachment_SapHybris.py  pdh_file_gen_etl.py  pdh_reconframework_report.py  pdh_sf_queries.py
dags/dev/: test_dag.py
etl/eg_egapac_settlement/: pdh_eg_egapac_settlement.txt  pdh_eg_egapac_settlement_etl.txt
etl/live_group/: pdh_lv_fee_listing.txt
etl/reporting_queries/: pdh_aia_etl.txt  pdh_dml_edp_missing_txns.txt  pdh_dml_edp_store_level.txt  pdh_dml_mastercard_fee_analysis_rpt.txt  pdh_dml_qc_online_missing_txns_summary.txt  pdh_dml_qc_partner.txt  pdh_dml_visa_fee_analysis_rpt.txt  pdh_dml_wpay_analytical_summary.txt
etl/sap_fee_posting/: pdh_sap_fee_posting_etl.txt
etl/str_sap_cust_mapping/: pdh_str_sap_fee_listing.txt  pdh_strmapping_etl.txt
infra/terraform/: backend.tf  permissions.tf  terraform.tfvars  triggers.tf  variables.tf
sql/dev/: 06-09-2021_user_role_changes.sql
variables/prod/: variables.json
(+138 files in other folders)
